# bone-anisotropy-optimized

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  kernel.c  kernel.h  main.c  main.cpp
bvtv/: bvtv.c  bvtv.h
coord_map/: coord_map.c  coord_map.h
eigen/: eigen.c  eigen.h
ellipsoid/: Makefile  ellipsoid.c  ellipsoid.h  ellipsoid_opt.c  ellipsoid_simd.c  ellipsoid_simd_points.c  ellipsoid_simd_points_precompute.c  ellipsoid_simd_points_shuffles.c  ellipsoid_simd_precompute.c  ellispoid.c  test.py
mil/: mil.c  mil.h  mil2.c  mil2.h  mil2_simd.c  mil2_simd.h  test_mil.c  test_mil.h
mil/mil_benchmark/: CMakeLists.txt  main.cpp  mil_tests.c
presentation/: README.md  presentation-template-1.pptx
presentation/remark_version/: create_PDF.sh  fastcode_presentation.html
presentation/remark_version/css/: common.css
presentation/remark_version/figs/plots/mil/: plot.py
presentation/remark_version/figs/plots/regions/: plot.py
presentation/remark_version/js/: common.js  terminal.language.js
reader/: reader.c  reader.h
regions/: region_extraction.c  region_extraction.h
regions/example/: CMakeLists.txt  simple_memory.c
report/: bibl_conf.bib  conflict_miss.pdf_tex  report.tex
report/figs/: heterogeneous_blocking.eps  mil_blocking.eps  mil_blocking_2.eps  simd_mil.eps  simd_mil2.eps
report/figs/conflict_miss/: conflict_miss.pdf_tex  mil_blocking_conflicts_64.pgf  mil_blocking_conflicts_65.pgf
report/figs/plots/ellipsoid/: plot.py
report/figs/plots/mil/: mil_benchmark.csv  plot.py
report/figs/plots/overall/: plot.py
report/figs/plots/regions/: plot.py
test/mil_and_ellipsoid/: direction_vectors.csv  ellipsoid_results.csv  mil_results.csv  sphere_hr.csv
utils/: utils.c  utils.h
visual/: README.md  write_fabForVTK.py
visual/TensorImageView/: CMakeLists.txt  TensorImageView.cxx
